fix: 더보기옵션 컴포넌트 z-index 및 main-layout 너비 침범 문제 해결

--- a/frontend/src/assets/css/components/popupModal/moreOption.scss
+++ b/frontend/src/assets/css/components/popupModal/moreOption.scss
@@ -1,13 +1,14 @@
 // moreOption.jsx
 .more-option {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 5;
     display: flex;
     align-items: flex-end;
+    top: 0;
+    left: 0;
+    max-width: clamp(390px, 100vw, 520px);
+    width: 100%;
+    height: 100%;
+    z-index: 21;
 
     &__container {
         position: relative;
